# whisper-simple-dictation

./: .gitignore  README.md  dictation.py  dictation_auto_off.py  dictation_remote.service  engine.py  example_service_file.service  junk.py  kyutai_dictation.py  pynputmic.py  pyproject.toml  pyproject_local.toml  requirements.txt  requirements_local.txt  requirements_moshi.txt  requirements_remote.txt  run_dictation.sh  run_dictation_auto_off.sh  run_dictation_local.sh  run_dictation_remote.sh
legacy_auto_off/: README.md  _lagacy_dictation_auto_off_pynput.py  dictation_local.service  run_dictation_auto_off.sh
